# Task-Runner

./: .gitignore  .npmignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.md  SECURITY.md  package.json  v101.md  v102.md  v103.md  v104.md
.github/: dependabot.yml  labels.yml  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
examples/: task-runner.json  task-runner.yaml
scripts/: test-all.sh  test-project.sh  validate-structure.sh
src/: config.rs  error.rs  executor.rs  lib.rs  main.rs  task.rs  utils.rs
tests/: test-config.json
